cli/tests/snapshots/real/02-terminal/announcement-fullscreen.snap
---
source: cli/tests/support/tui_process.rs
expression: screen
---
  Announcement: Run ash update for ANNOUNCEMENT-PTY.
  <FIXTURE…>                                                …                          [Dashboard]

























  ────────────────────────────────────────────────────────────────────────────────────────────────
  > Keep this draft
  ───────────────────────────────────────────────────────────────────────────── ash-real-scenario

  ⏸ Manual
