cli/tests/snapshots/real/02-terminal/collaboration-shortcuts.snap
---
source: cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>                                      …                            [— / —] [Dashboard]


























  ────────────────────────────────────────────────────────────────────────────────────────────────
  > BOUND-DRAFT≤≥
  ─────────────────────────────────────────────────────────────────────── Automatic model · Debug

  Enter send  ·  / commands
